<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    tools:context=".view.activity.AllListActivity">
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabSelectedTextColor="@color/colorAccent"
        app:tabTextColor="@color/white">
  <com.google.android.material.tabs.TabItem
      android:id="@+id/tab_item_lesson"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/lesson"/>
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like"/>
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_item_saved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saved"/>
    </com.google.android.material.tabs.TabLayout>
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>