<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginStart="@dimen/margin_top_button"
    android:layout_marginEnd="@dimen/margin_top_button"
    android:layout_height="match_parent">
<androidx.cardview.widget.CardView
    android:layout_marginTop="@dimen/margin_title"
    android:layout_marginBottom="@dimen/margin_title"
    android:layout_width="300dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/lesson_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text_view_lesson"
            android:layout_marginTop="@dimen/margin_top_button"
            android:text="@string/lesson"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="#F4F2CA"
            android:textSize="@dimen/num_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_marginStart="@dimen/margin_top_button"
            android:layout_marginEnd="@dimen/margin_top_button"
            android:background="#79D3D1D1"
            android:layout_width="match_parent"
            android:layout_height="2dp"/>
        <TextView
            android:textColor="#F4F2CA"
            android:textSize="@dimen/button_text_size"
            android:text="@string/detail_lesson"
            android:layout_margin="@dimen/margin_top_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/button_play"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/play_lesson"
            android:background="@drawable/button_lesson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
</LinearLayout>